--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>iTech Empires Demo - JQuery Username availability validation</title>
+	<title>JQuery Username availability validation</title>
 	<!-- jQuery file  -->
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<!-- Custom JS file -->
